# ECO_Alpha

./: .aiignore  .gitignore  CIBD22X_ROUNDTRIP_VERIFICATION.md  CIBD22X_UNI_BASE_INTEGRATION.md  GUI_CIBD22X_ONLY_CHANGES.md  README.md  requirements-dev.txt  requirements.txt  test_both_translators.py  test_gui_cibd22x_only.py  test_gui_import.py  test_tree_navigator.py
.junie/: guidelines.md
Not Currently used/: streamlit_app.py
Reference_Datasets/: EMJSON_v5_mapping_scaffold_v2.xlsx
cbecc - old translator/: __init__.py  export_emjson_v5_to_cibd22x.py  mapping_cleanup.py  parsers_catalogs.py  parsers_systems.py  parsers_zones.py  translate_cibd22x_to_v6.py
cibd22_rt/: __init__.py  translate_cibd22_to_v6.py
cibd22x_uni_base/: PIPELINE_VALIDATION_SUMMARY.md  QUICK_START.md  README.md  requirements.txt
eco_tools_parser/: README.md  pyproject.toml  setup.py
eco_tools_parser/eco_tools/core/: internal_repr.py
eco_tools_parser/eco_tools/formats/: base_adapter.py
eco_tools_parser/tests/: __init__.py
eco_tools_parser/tests/unit/: test_id_registry.py
em-tools/: README.md  setup.py
emjson6_full_rt/: emjson6_to_cibd22x.py  parsers_systems.py  parsers_zones.py  test_roundtrip.py  translate_cibd22x_to_v6.py  translate_xml_cli.py
emjson6_full_rt - pre-claude cibd22x translator/: README.me  mapping_cleanup.py  parsers_catalogs.py  parsers_hvac.py  parsers_systems.py  parsers_zones.py  translate_cibd22x_to_v6.py  translate_xml_cli.py
explorer_gui/: __init__.py  diagnostics.py  import_export.py  main.py  translators.py
tests/: em_large_50_zones.json  (+16 more)
(+154 files in other folders)
